# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.355 2005/10/13 17:15:57 rocket Exp $

  13 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Check for the correct arch specific cd building tool

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Print a warning if livecd/iso is not defined

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Reverted default CHOST for x86 back to i386-pc-linux-gnu.

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/post-kmerge.sh:
  Check for existence of files in /lib/modules before running depscan.sh. This
  replaces the mips-specific check and makes it portable.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  update autoresume logic when dealing with rsync unpack operations

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/post-kmerge.sh:
  Bypass module load on mips

  10 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  remove --no-deps so dependancies get installed for genkernel

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix missing : statement in unpack

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix livecd-stage2 unpack when seedcache is turned off

  10 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Fix module unpacking and make it actually optional.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken seedcache autoresume interaction

  07 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Cleanup stage directories properly for tar installs

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
  Tinderbox no longer cleans /tmp/*
