@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/create-iso.sh,v 1.11 2005/10/13 17:15:57 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/create-iso.sh,v 1.12 2005/10/13 19:01:21 rocket Exp $
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
@@ -16,8 +16,6 @@ esac
    && echo && echo \
    && die "!!! /usr/bin/${cdmaker} is not found.  Have you merged ${cdmakerpkg}?" \
    && echo && echo
-
-
 
 # If not volume ID is set, make up a sensible default
 if [ -z "${clst_iso_volume_id}" ]
@@ -196,6 +194,45 @@ case ${clst_mainarch} in
 				;;
 			esac
 		fi
+	;;
+
+	mips)
+		case ${clst_fstype} in
+			normal)
+				# Gather up all our bits, and generate a tmp config file
+				# for sgibootcd
+				mkdir ${clst_target_path}/loopback ${clst_target_path}/sgibootcd
+				mv ${clst_target_path}/image.loop ${clst_target_path}/loopback
+				rm -f ${clst_target_path}/livecd
+				img="${clst_target_path}/loopback/image.loop"
+				knl="${clst_target_path}/kernels"
+				arc="${clst_target_path}/arcload"
+				cfg="${clst_target_path}/sgibootcd/sgibootcd.cfg"
+				touch ${cfg}
+
+				# Add the kernels first
+				for x in ${clst_boot_kernel}; do
+					echo -e "f=${knl}/${x}@${x}" >> ${cfg}
+				done
+
+				# Next, the bootloaders
+				echo -e "f=${arc}/sash64@sash64" >> ${cfg}
+				echo -e "f=${arc}/sashARCS@sashARCS" >> ${cfg}
+				echo -e "f=${arc}/arc.cf@arc.cf" >> ${cfg}
+
+				# Next, the Loopback Image
+				echo -e "p0=${img}" >> ${cfg}
+
+				# Finally, the required SGI Partitions
+				echo -e "p8=#dvh" >> ${cfg}
+				echo -e "p10=#volume" >> ${cfg}
+
+				# All done; feed the config to sgibootcd and end up with an image
+				/usr/bin/sgibootcd c=${cfg} o=${clst_iso}
+			;;
+
+			*) die "SGI LiveCDs only support the 'normal' fstype!"	;;
+		esac
 	;;
 esac
 exit  $?
